Remove `editLog`, implement basic sound system, make cleaner on mobile, attempt to fix workers dying when page is unfocused

--- a/src/ui/styles.css
+++ b/src/ui/styles.css
@@ -1,37 +1,48 @@
-html {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100vw;
-	min-height: 100vh;
-}
-
+html,
 body {
 	margin: 0;
 	padding: 0;
+
+	width: 100%;
+	height: 100%;
+
+	overflow: hidden;
 }
 
-div.DomUI {
-    --line-height: 15px;
 
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100vw;
-	min-height: 100vh;
-	background-color: black;
+div.DomUI {
+	--line-height: 15px;
+
+	position: fixed;
+
+	inset: 0;
+
+	width: 100%;
+	height: 100dvh;
+
+	background: black;
+
+	overflow: hidden;
 }
 
 div.LogBox {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	overflow-y: auto;
-	width: 100vw;
-	white-space: break-spaces;
+    display:flex;
+    flex-direction:column;
+
+    overflow-y:auto;
+    overflow-x:hidden;
+
+    width:100%;
+    height:100%;
+
+    -webkit-overflow-scrolling:touch;
+
+    white-space:break-spaces;
+
+    padding-bottom:env(safe-area-inset-bottom);
 }
 
-div.LogBox > p {
+div.LogBox>p {
 	width: 100%;
 	line-height: var(--line-height);
 
@@ -41,50 +52,61 @@ div.LogBox > p {
 	font-family: monospace;
 }
 
-div.LogBox > p.warning {
+div.LogBox>p.warning {
 	color: yellow;
 }
 
-div.LogBox > p.error {
+div.LogBox>p.error {
 	color: red;
 }
 
-div.LogBox > p > img {
+div.LogBox>p>img {
 	overflow: hidden;
 	filter: saturate(0.68) contrast(1.2);
 	image-rendering: pixelated;
 }
 
-div.LogBox > p > span > a {
+div.LogBox>p>span>a {
 	color: inherit;
 	text-decoration: none;
 }
 
-div.LogBox > p > span > a:hover {
+div.LogBox>p>span>a:hover {
 	text-decoration: underline;
 }
 
-div.LogBox > div.input {
-	width: 100%;
-	height: 15px;
-	display: flex;
+div.LogBox>div.input {
+	
+	display:flex;
 	flex-direction: row;
-	order: 999999;
+    align-items:center;
+	order: 99999;
+	
 	margin: 0;
 	padding: 0;
 	color: white;
 	font-family: monospace;
+	
+    width:100%;
+    min-height: var(--line-height);
+
+    padding-bottom: max(
+        4px,
+        env(safe-area-inset-bottom)
+    );
+
+    flex-shrink:0;
 }
 
-div.LogBox > div.input.inline {
+div.LogBox>div.input.inline {
 	order: 0 !important;
 }
 
-div.LogBox > div.input > p {
+div.LogBox>div.input>p {
 	margin: 0;
 }
 
-div.LogBox > div.input > input.reqInput {
+div.LogBox>div.input>input.reqInput {
 	flex: 1;
 	background: transparent;
 	border: none !important;
